c/examples/writing-a-c-compiler-tests/tests/chapter_16/valid/char_constants/return_char_constant.c
/* Simplest possible test case for using a character constant */
int main(void) {
    return 'c'; // ASCII value 99
}