c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/compound_initializer_for_pointer.c
/* You can't initialize a pointer with a compound initializer */
int main(void) {
    char *ptr = {'a', 'b', 'c'};
    return 0;
}